<resources>
    <string name="app_name">Meet&amp;Nature</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="user_photo">User profile picture</string>
    <string name="prompt_passwordrepeat">Repeat password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="event_name">Name: </string>
    <string name="event_owner">Owner: </string>
    <string name="event_country">Country: </string>
    <string name="event_city">City: </string>
    <string name="event_place">Place: </string>
    <string name="event_date">Date n time:</string>
    <string name="event_description">Description: </string>
    <string name="event_tags">Tags: </string>
    <string name="edit_profile">Edit profile</string>
    <string name="event_going">Going</string>
    <string name="event_start">Start</string>
    <string name="submit">Submit</string>

    <!-- Titles -->
    <string name="app_title">"Meet &amp; Nature"</string>
    <string name="login_title">"Login"</string>
    <string name="register_title">"Register"</string>

    <!-- Links -->
    <string name="RegisterLink">"Don't have an account?"</string>
    <string name="LoginLink">"Already have an account?"</string>

    <!-- Actions -->
    <string name="Search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>